# web

./: README.md
backend/: .gitignore  README.md  manage.py  pyproject.toml
backend/core/: views.py
backend/covid/: admin.py  forms.py  models.py  urls.py  views.py
backend/covid/migrations/: 0001_initial.py  0002_auto_20200316_2056.py  0003_auto_20200322_2027.py
backend/covid/static/covid/: style.css
backend/covid/templates/covid/: base.html  index.html  profile.html  supplier.html
backend/covid/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html  userprofile.html  userprofile_delete.html
backend/covid_resource_matcher/: asgi.py  settings.py  urls.py  wsgi.py
